<resources>
    <string name="app_name">Book Listing App</string>
    <string name="course">Nanodegree Android Basic</string>
    <string name="project_number">Project 07</string>
    <string name="author">by Jesse Lima</string>
    <string name="near_the">Near the</string>

    <!-- Text to display in the list when there are no books [CHAR LIMIT=NONE] -->
    <string name="no_books">No books found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Favorites Categories </string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
    <string name="search_input_hint">Search books by category or subject.</string>
    <string name="free">FREE</string>
    <string name="price">PRICE</string>
    <string name="buy">Buy\u0020</string>
    <string name="space">\u0020</string>
    <string name="unknown_date">Unknown date</string>
    <string name="not_for_sale">Not for sale</string>
    <string name="unavailable">Unavailable</string>
    <string name="description">Description:\u0020</string>
    <string name="authors">Authors:\u0020</string>
    <string name="publisher">Publisher:\u0020</string>
    <string name="average_rating">Average Rating:\u0020</string>
    <string name="published_date">Published Date:\u0020</string>
    <string name="pages">Pages:\u0020</string>

</resources>
