<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_item_list_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:maxLines="1"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:text="Aplicações web real-time com Node.js" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/textLabel"
                    android:text="@string/authors"/>
                <TextView
                    android:id="@+id/text_view_authors"
                    style="@style/textLabel"
                    android:textStyle="normal"
                    android:maxLines="1"
                    tools:text="Caio Ribeiro"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/textLabel"
                    android:text="@string/pages"/>
                <TextView
                    android:id="@+id/text_view_pages_count"
                    style="@style/textLabel"
                    android:textStyle="normal"
                    tools:text="329"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/textLabel"
                    android:text="@string/average_rating"/>
                <RatingBar
                    android:id="@+id/rating_bar_view"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:numStars="5"
                    android:rating="4"
                    android:stepSize="1"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_view_currency_code"
                style="@style/textLabel"
                android:layout_gravity="end"
                android:textStyle="italic"
                android:text="@string/price"/>
            <TextView
                android:id="@+id/text_view_price"
                style="@style/textLabel"
                android:layout_gravity="end"
                tools:text="17,99"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>