<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp">

    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/root_content_layout"
            style="@style/LinearLayoutDetailsLineVertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/image_view_book"
                        android:layout_width="wrap_content"
                        android:layout_height="180dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="fitCenter"
                        android:visibility="gone"/>
                    <ProgressBar
                        android:id="@+id/loading_image_book_indicator"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:visibility="visible"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/LinearLayoutDetailsLineVertical">
                        <TextView
                            style="@style/textLabel"
                            android:id="@+id/text_view_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:maxLines="3"
                            android:textAllCaps="false"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            tools:text="JavaScript: The Definitive Guide" />
                        <TextView
                            android:id="@+id/text_view_sub_title"
                            style="@style/textLabel"
                            android:layout_gravity="start"
                            android:textStyle="italic"
                            android:maxLines="3"
                            tools:text="Activate Your Web Pages" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/LinearLayoutDetailsLine">
                        <TextView
                            style="@style/textLabel"
                            android:text="@string/authors"/>
                        <TextView
                            android:id="@+id/text_view_authors"
                            style="@style/textLabel"
                            android:textStyle="normal"
                            tools:text="Caio Ribeiro"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/button_buy"
                        style="@style/buttonDefault"
                        tools:text="BUY BRL 19.90"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_8"
                android:background="@color/colorBgLightGrey">

                <LinearLayout
                    style="@style/LinearLayoutDetailsLine">
                    <TextView
                        style="@style/textLabel"
                        android:text="@string/average_rating"/>
                    <RatingBar
                        android:id="@+id/rating_bar_view"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="80dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:numStars="5"
                        android:rating="4"
                        android:stepSize="1"/>
                    <TextView
                        android:id="@+id/text_view_ratings_number"
                        style="@style/textLabel"
                        android:textStyle="normal"
                        tools:text="25"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/LinearLayoutDetailsLine">
                    <TextView
                        style="@style/textLabel"
                        android:text="@string/publisher"/>
                    <TextView
                        android:id="@+id/text_view_publisher"
                        style="@style/textLabel"
                        android:textStyle="normal"
                        tools:text="Springer"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/LinearLayoutDetailsLine">
                    <TextView
                        style="@style/textLabel"
                        android:text="@string/published_date"/>
                    <TextView
                        android:id="@+id/text_view_published_date"
                        style="@style/textLabel"
                        android:textStyle="normal"
                        tools:text="2012-12-06"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/LinearLayoutDetailsLine">
                    <TextView
                        style="@style/textLabel"
                        android:text="@string/pages"/>
                    <TextView
                        android:id="@+id/text_view_pages_count"
                        style="@style/textLabel"
                        android:textStyle="normal"
                        tools:text="329"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/LinearLayoutDetailsLine"
                    android:orientation="vertical">
                    <TextView
                        style="@style/textLabel"
                        android:layout_gravity="start"
                        android:layout_marginBottom="@dimen/margin_4"
                        android:layout_marginTop="@dimen/margin_8"
                        android:text="@string/description"/>
                    <TextView
                        android:id="@+id/text_view_description"
                        style="@style/textLabel"
                        android:textStyle="normal"
                        android:layout_gravity="start"
                        tools:text="Some description here if available..."/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="gone"/>
</LinearLayout>


